@@ -141,6 +141,7 @@ char *do_browser(char *path, DIR *dir);
 char **browser_init(const char *path, int *longest, size_t *numents, DIR
 	*dir);
 char *do_browse_from(const char *inpath);
+void parse_browser_input(int *kbinput, bool *meta_key, bool *func_key);
 void striponedir(char *path);
 #endif
 
